tests/error/cant_infer.gw
#! [contains] can't infer
var auto i;
